// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText default 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    type="text"
  />
</div>
`;

exports[`InputText should accept disabled 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
  background: #F5F6F7;
  color: #939BA5;
}

.c1:hover {
  border-color: #DEE1E5;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    disabled={true}
    type="text"
  />
</div>
`;

exports[`InputText should accept readOnly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    readOnly={true}
    type="text"
  />
</div>
`;

exports[`InputText should accept required 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    required={true}
    type="text"
  />
</div>
`;

exports[`InputText with a placeholder 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    placeholder="I am a placeholder"
    type="text"
  />
</div>
`;

exports[`InputText with a value 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    type="text"
    value="Some value"
  />
</div>
`;

exports[`InputText with an error validation 1`] = `
.c3 {
  color: #CC1F36;
  width: 18px;
  height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #939BA5;
  pointer-events: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
  border-color: #ED3B53;
}

.c1:hover {
  border-color: #CC1F36;
}

.c1:focus,
.c1:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    type="text"
  />
  <div
    className="c2"
  >
    <div
      className="c3 "
      color="palette.red500"
      size={18}
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 22 19"
        width="100%"
      >
        <title>
          Warning
        </title>
        <path
          d="M0 19h22L11 0 0 19zm12-3h-2v-2h2v2zm0-4h-2V8h2v4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputText with aria-describedby 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    aria-describedby="some-id"
    type="text"
  />
</div>
`;

exports[`InputText with name and id 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 36px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 input {
  border: none;
  background: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  height: 100%;
  width: 100%;
  outline: none;
  padding: 0;
}

.c0::-webkit-input-placeholder {
  color: #939BA5;
}

.c0::-moz-placeholder {
  color: #939BA5;
}

.c0:-ms-input-placeholder {
  color: #939BA5;
}

.c0::placeholder {
  color: #939BA5;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c1 {
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  height: 36px;
  width: 100%;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

<div
  className="c0 c1"
  onClick={[Function]}
>
  <input
    id="Bobby"
    name="Bob"
    type="text"
  />
</div>
`;
